Verify step 1 repeatablity

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -66,8 +66,7 @@
   "customizations": {
     "codespaces": {
       "openFiles": [
-        "CONSENSUS-HACKATHON-DETAILS.md",
-        "choose-front-end-framework.md"
+        "README.md",
       ]
     },
     "vscode": {
