--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
   },
   "dependencies": {
     "@stellar/stellar-sdk": "^13.3.0",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.15.21",
+    "@types/react": "^19.1.5",
+    "@types/react-dom": "^19.1.5",
     "arbitrage-apes": "link:packages/arbitrage-apes",
     "passkey-kit": "^0.10.22"
   }
