Run through full workflow several times

--- a/.gitignore
+++ b/.gitignore
@@ -27,9 +27,5 @@ target
 .env
 /.stellar/contract-ids/*
 /.env.env.old
-/packages/arbitrage-apes/src/index.ts
-/packages/arbitrage-apes/package.json
-/packages/arbitrage-apes/README.md
-/packages/arbitrage-apes/tsconfig.json
+/packages/arbitrage-apes/*
 /.env.old
-/pnpm-workspace.yaml
