--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,8 @@ stellar-ownable = { git = "https://github.com/OpenZeppelin/stellar-contracts" }
 stellar-non-fungible = { git = "https://github.com/OpenZeppelin/stellar-contracts" }
 stellar-default-impl-macro = { git = "https://github.com/OpenZeppelin/stellar-contracts" }
 stellar-ownable-macro = { git = "https://github.com/OpenZeppelin/stellar-contracts" }
+stellar-upgradeable = { git = "https://github.com/OpenZeppelin/stellar-contracts" }
+stellar-upgradeable-macros = { git = "https://github.com/OpenZeppelin/stellar-contracts" }
 
 [profile.release]
 opt-level = "z"
