--- a/package.json
+++ b/package.json
@@ -21,5 +21,6 @@
     "arbitrage-apes": "link:packages/arbitrage-apes",
     "create-next-app": "^15.3.2",
     "passkey-kit": "^0.10.22"
-  }
+  },
+  "packageManager": "pnpm@10.11.0+sha512.6540583f41cc5f628eb3d9773ecee802f4f9ef9923cc45b69890fb47991d4b092964694ec3a4f738a420c918a333062c8b925d312f42e4f0c263eb603551f977"
 }
