--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -45,14 +45,14 @@
       "configureZshAsDefaultShell": true 
     },
     "ghcr.io/devcontainers/features/rust:1.3.1": {
-      "targets": "wasm32-unknown-unknown",
+      "targets": "wasm32v1-none",
       "profile": "default",
-      "version": "1.81"
+      "version": "1.84"
     },
     "ghcr.io/devcontainers-extra/features/gh-release:1.0.25": {
       "repo": "stellar/stellar-cli",
       "binaryNames": "stellar",
-      "version": "22.8.0"
+      "version": "22.8.1"
     },
     "ghcr.io/rapidsai/devcontainers/features/sccache:25.6.1": {
       "repository": "mozilla/sccache",
@@ -99,7 +99,7 @@
     }
   },
   "initializeCommand": "",
-  "onCreateCommand": "chmod +x .devcontainer/post_start_cli_autocomplete.sh && chmod +x .devcontainer/post_attach_welcome_text.sh",
+  "onCreateCommand": "chmod -R +x .devcontainer",
   "updateContentCommand": "",
   "postCreateCommand": ". ${NVM_DIR}/nvm.sh && nvm install --lts",
   "postStartCommand": {
