Fix devcontainer config
Signed-off-by: Chris.Anatalio <chris.anatalio@stellar.org>

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -27,7 +27,7 @@
     "80": {
       "label": "http",
       "onAutoForward": "openPreview",
-      elevateIfNeeded: true
+      "elevateIfNeeded": true
     },
     "5173": {
       "label": "vite",
