--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@babel/core": "^7.27.4",
+    "@babel/plugin-transform-typescript": "^7.27.1",
+    "@babel/preset-typescript": "^7.27.1",
+    "ts-node": "^10.9.2",
+    "tslib": "^2.8.1",
     "typescript": "^5.8.3",
     "vite": "^6.3.1"
   },
@@ -19,8 +24,10 @@
     "@types/react": "^19.1.5",
     "@types/react-dom": "^19.1.5",
     "arbitrage-apes": "link:packages/arbitrage-apes",
+    "buffer": "^6.0.3",
     "create-next-app": "^15.3.2",
-    "passkey-kit": "^0.10.22"
+    "dotenv": "^16.4.7",
+    "passkey-kit": "^0.10.24"
   },
   "packageManager": "pnpm@10.11.1+sha512.e519b9f7639869dc8d5c3c5dfef73b3f091094b0a006d7317353c72b124e80e1afd429732e28705ad6bfa1ee879c1fce46c128ccebd3192101f43dd67c667912"
 }
